# SQLSelectProject

./: .editorconfig  .env.example  .gitattributes  .gitignore  ENTERPRISE_AUDIT_FIXES.md  IMPLEMENTATION_STATUS_REPORT.md  INFRASTRUCTURE.md  Makefile  PRODUCTION_READINESS_REPORT.md  PROJECT_SUMMARY.md  Querying_Databases_Using_SQL_SELECT_Statement.sql  README.md  ROADMAP.md  ROADMAP_UPDATE.md  docker-compose.yml
.github/workflows/: build.yml  ci.yml  code-quality.yml  deploy-dev.yml  deploy-prod.yml  deploy-production.yml  deploy-staging.yml  test.yml
database/migrations/: V1__create_schema.sql  V2__create_functions_and_triggers.sql  V3__create_views_and_materialized_views.sql  V4__create_indexes_and_optimization.sql
database/scripts/: backup.sh  restore.sh  seed_data.sql
docs/: API_DOCUMENTATION.md  DEPLOYMENT_GUIDE.md  PRODUCTION_DEPLOYMENT.md
infrastructure/logging/logstash/: pipeline.conf
infrastructure/monitoring/prometheus/: alerts.yml  prometheus.yml
infrastructure/nginx/: nginx.conf
infrastructure/nginx/conf.d/: api.conf
infrastructure/terraform/: README.md
k8s/base/api-python/: configmap.yaml  deployment.yaml  hpa.yaml  service.yaml
k8s/base/ingress/: ingress.yaml
k8s/base/monitoring/: grafana.yaml  prometheus-config.yaml
services/analytics-cuda/: Dockerfile  README.md  requirements.txt
services/api-python/: .flake8  .pre-commit-config.yaml  .pylintrc  Dockerfile  pyproject.toml  pytest.ini  requirements.txt
services/api-python/app/: main.py
services/api-python/app/api/v1/: __init__.py
services/api-python/app/api/v1/endpoints/: analytics.py  auth.py  departments.py  employees.py  health.py  salaries.py
services/api-python/app/core/: cache_warmer.py  config.py  database.py  logging.py  metrics.py  production_config.py  security.py  telemetry.py
services/api-python/app/middleware/: error_handler.py  request_id.py  timing.py
services/api-python/app/models/: __init__.py  audit_log.py  base.py  department.py  dept_emp.py  employee.py  salary.py  title.py  user.py
services/api-python/app/repositories/: __init__.py  base.py  department_repository.py  employee_repository.py  salary_repository.py  user_repository.py
services/api-python/app/schemas/: __init__.py  analytics.py  auth.py  department.py  employee.py  salary.py
services/api-python/app/services/: __init__.py  auth_service.py  department_service.py  employee_service.py  salary_service.py
services/api-python/app/utils/: analytics_client.py  cache.py
services/api-python/tests/: conftest.py
services/api-python/tests/integration/: test_analytics.py  test_auth.py  test_departments.py  test_employees.py  test_salaries.py
services/api-python/tests/performance/: load_test.js  soak_test.js  stress_test.js  test_load.py
services/api-python/tests/unit/: test_cache.py  test_middleware.py  test_models.py  test_security.py
tests/: conftest.py
tests/integration/: test_api_health.py
tests/unit/: test_example.py
(+38 files in other folders)
